# elemate

./: .gitignore  CMakeLists.txt  Configure_Doxygen_Dokumentation.bat  Doxygen.cfg  README.md  Show_Doxygen_Documentation.bat  main.cpp
cmake/: Custom.cmake  FindAPEX.cmake  FindAPEX_Framework.cmake  FindAPEX_Framework_Physx.cmake  FindAPEX_Modules.cmake  FindAPEX_Paramerterized.cmake  FindASSIMP.cmake  FindFMOD.cmake  FindGLEW.cmake  FindGLFW.cmake  FindLUA.cmake  FindPhysX.cmake  PlatformLinuxGCC.cmake  PlatformWindowsMSVC.cmake
data/: hand.3DS  phong.frag  phong.vert  world.frag  world.vert
elemate/: CMakeLists.txt  main.cpp
libelemate/: CMakeLists.txt  elements.cpp  elements.h  game.cpp  game.h  physicserrorcallback.cpp  physicserrorcallback.h  physicswrapper.cpp  physicswrapper.h  texturemanager.cpp  texturemanager.h  world.cpp  world.h
libelemate/io/: imagereader.cpp  soundmanager.cpp  soundmanager.h
libelemate/lua/: luawrapper.cpp  luawrapper.h  luawrapperfunction.cpp  luawrapperfunction.h
libelemate/particles/: downgroup.cpp  downgroup.h  emittergroup.cpp  emittergroup.h  particlecollision.cpp  particlecollision.h  particlegroup.cpp  particlegroup.cpp.orig  particlegroup.h  particlegroup.h.orig  particlegrouptycoon.cpp  particlegrouptycoon.h  particlehelper.cpp  particlehelper.h  particlescriptaccess.cpp  particlescriptaccess.h
libelemate/rendering/: debugstep.cpp  debugstep.h  drawable.cpp  drawable.h  particledrawable.cpp  particledrawable.h  particlestep.cpp  particlestep.h  renderer.cpp  renderer.h  renderingstep.cpp  renderingstep.h  shadowingdrawable.cpp  shadowingdrawable.h  shadowmappingstep.cpp  shadowmappingstep.h
libelemate/rendering/string_rendering/: CharacterDrawable.cpp  CharacterDrawable.h  RawFile.cpp  RawFile.h  StringComposer.h  StringDrawer.cpp  StringDrawer.h
libelemate/terrain/: basetile.cpp  basetile.h  liquidtile.cpp  liquidtile.h  physicaltile.cpp  physicaltile.h  temperaturetile.cpp  temperaturetile.h  terrain.cpp  terrain.h  terrain.h.orig  terraingenerator.cpp  terraingenerator.h  terraininteraction.cpp  terraininteraction.h  terraininteractor.cpp  terraininteractor.h  terrainsettings.cpp  terrainsettings.h  terrainshadows.cpp  terraintile.cpp  terraintile.h  watertile.cpp  watertile.h
libelemate/ui/: achievement.cpp  achievement.h  achievementmanager.cpp  achievementmanager.h  eventhandler.cpp  eventhandler.cpp.orig  eventhandler.h  hand.cpp  hand.cpp.orig  hand.h  manipulator.cpp  manipulator.h  menupage.cpp  menupage.h  navigation.h  rain.cpp  rain.h  userinterface.cpp  userinterface.h
libelemate/utils/: CyclicTime.h  Timer.h  pxcompilerfix.h
scripts/: CMakeLists.txt  achievements.lua  collision.lua  glfw.lua  luascript.lua  manipulator.lua  start.lua  water.lua
scripts/elements/: bedrock.lua  lava.lua  sand.lua  steam.lua  stone.lua  water.lua
shader/: CMakeLists.txt  CMakeLists.txt.orig  boundingbox.frag  boundingbox.geo  flush.frag  flush.vert  hand.frag  hand.vert  material.frag  particle_water.frag  particle_water.geo  particle_water.vert  particle_water_depthblurring.frag  particle_water_depthblurring_h.frag  particle_water_depthblurring_v.frag  particle_water_normals.frag  phongLighting.frag  preview.frag  preview.vert  shadow_terrain.frag  sphere.frag  sphere.vert  string_drawer.frag  string_drawer.vert  terrain.frag  terrain.geo  terrain.vert  terrainBase.frag  terrainBase.vert  terrainPlain.frag  terrainPlain.vert  terrain_base.frag  terrain_base.geo  terrain_base.vert  terrain_water.frag  terrain_water.geom  terrain_water.vert  world.frag
shader/debug/: box.frag  box.vert  solidBox.geo  wireframeBox.geo
shader/deprecated_terrain/: terrain_base.geom
shader/particle/: material.frag  particle.frag  particle_depthblurring_h.frag  particle_depthblurring_v.frag  particle_normals.frag
shader/particles/: material.frag  particle.geo
shader/shadows/: depth_util.frag  depthmap.frag  depthmapLinearized.frag  depthmap_hand.vert  depthmap_terrain.frag  depthmap_terrain.geo  depthmap_terrain.vert  depthmap_terrain_linearized.frag  lightmap.frag  lightmap_hand.vert  lightmap_terrain.frag  lightmap_terrain.vert  shadow_hand.frag  shadow_terrain.frag  shadow_terrain.vert  shadowmapping.frag  shadowmapping_hand.vert  shadowmapping_terrain.vert
shader/ui/: achievement.frag  achievement.vert  preview.frag  preview.vert  rain.frag  rain.geo  rain.vert  screen.frag  screen.vert
shader/utils/: depth_util.frag
src/: CMakeLists.txt  SimpleConfigReader.cpp  SimpleConfigReader.h  cameraex.cpp  cameraex.h  elements.cpp  elements.h  eventhandler.cpp  eventhandler.h  game.cpp  game.h  godeventhandler.cpp  godeventhandler.h  godmanipulator.cpp  godmanipulator.h  godnavigation.cpp  godnavigation.h  hand.cpp  hand.h  helper.cpp  helper.h  imagereader.cpp  imagereader.h  luawrapper.cpp  luawrapper.h  luawrapperfunction.cpp  luawrapperfunction.h  main.cpp  makermanipulator.cpp  makermanipulator.h  manipulator.cpp  manipulator.h  navigation.cpp  navigation.h  nullobjectplaceholder.cpp  nullobjectplaceholder.h  objectscontainer.cpp  objectscontainer.h  particledrawable.cpp  particledrawable.h  (+31 more)
src/APEX-Examples/: ZeusRenderResourceManager.cpp  ZeusRenderResourceManager.h  ZeusRenderResources.cpp  ZeusRenderResources.h  ZeusResourceCallback.cpp  ZeusResourceCallback.h
src/apex/: elematerenderresourcemanager.cpp  elematerenderresourcemanager.h  elematerendervertexbuffer.cpp  elematerendervertexbuffer.h  elemateresourcecallback.cpp  elemateresourcecallback.h
src/deprecated_terrain/: elemateterrain.h  terraingenerator.cpp
src/doxygen/: README.md
src/hpicgs/: ChronoTimer.cpp  ChronoTimer.h  CyclicTime.cpp  CyclicTime.h  Timer.cpp  Timer.h
src/lua/: luawrapper.cpp  luawrapper.h  luawrapperfunction.cpp  luawrapperfunction.h
src/osg/: dynamicterraintile.cpp  dynamicterraintile.h  sharedgeometrytechnique.cpp  sharedgeometrytechnique.h  xzPlaneLocator.cpp  xzPlaneLocator.h
src/particles/: particlecollision.cpp  (+5 more)
tests/: CMakeLists.txt  test.cpp
tests/gtest-1.7.0/: CMakeLists.txt
tests/units/: game_test.cpp
(+53 files in other folders)
